# swagger.json
@@ -109,56 +109,7 @@ GOOGLE_APPLICATION_CREDENTIALS not set or file not found
                 }
             ]
         },
-        "/products/{uuid}/": {
-            "get": {
-                "operationId": "products_read",
-                "description": "",
-                "parameters": [],
-                "responses": {
-                    "200": {
-                        "description": ""
-                    }
-                },
-                "tags": [
-                    "products"
-                ]
-            },
-            "put": {
-                "operationId": "products_update",
-                "description": "",
-                "parameters": [],
-                "responses": {
-                    "200": {
-                        "description": ""
-                    }
-                },
-                "tags": [
-                    "products"
-                ]
-            },
-            "delete": {
-                "operationId": "products_delete",
-                "description": "",
-                "parameters": [],
-                "responses": {
-                    "204": {
-                        "description": ""
-                    }
-                },
-                "tags": [
-                    "products"
-                ]
-            },
-            "parameters": [
-                {
-                    "name": "uuid",
-                    "in": "path",
-                    "required": true,
-                    "type": "string"
-                }
-            ]
-        },
-        "/products/{uuid}/qr/": {
+        "/products/{id}/qr/": {
             "get": {
                 "operationId": "products_qr_list",
                 "description": "",
@@ -174,7 +125,7 @@ GOOGLE_APPLICATION_CREDENTIALS not set or file not found
             },
             "parameters": [
                 {
-                    "name": "uuid",
+                    "name": "id",
                     "in": "path",
                     "required": true,
                     "type": "string"
